<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="6dp"
    android:elevation="6dp">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aqua"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/white"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/stud_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/profile_iv"
            android:text="@string/stud_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/degree_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stud_Name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/profile_iv"
            android:text="@string/degree_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/degree_Name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/profile_iv"
            android:text="@string/level"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@id/profile_iv"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear01"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_tv"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textStyle="bold|italic"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/edit" />

            <Button
                android:id="@+id/delete_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:text="@string/delete"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>